5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4343/executions/1644_1053.log
== SUBMITION (2019-04-16 13:13:42) 
-- CODE:
patrono = input ("Qual o nome do patrono?")
if(patrono == "cervo") :
	mensagem = "cervo eh patrono do Harry Potter"
else:
		mensagem = patrono + "nao eh patrono do Harry Potter"
print (mensagem)
-- EXECUTION TIME:
0.160766
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:51:06) 
-- CODE:
patrono = input ("Qual o nome do patrono?")
if(patrono == "cervo")
 mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = patrono + "nao eh patrono de Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.251676
-- ERROR:
  File "/home/codebench/codes/1644/1053/main.py", line 2
    if(patrono == "cervo")
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:51:15) 
-- CODE:
patrono = input ("Qual o nome do patrono?")
if(patrono == "cervo")
 mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = patrono + "nao eh patrono de Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.168405
-- ERROR:
  File "/home/codebench/codes/1644/1053/main.py", line 2
    if(patrono == "cervo")
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:21:21) 
-- CODE:
patrono = input ("Qual o nome do patrono?")
if(patrono == "cervo")
 mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = patrono + "nao eh patrono de Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.153006
-- ERROR:
  File "/home/codebench/codes/1644/1053/main.py", line 2
    if(patrono == "cervo")
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:21:32) 
-- CODE:
patrono = input ("Qual o nome do patrono")
if(patrono == "cervo")
 mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = patrono + "nao eh patrono de Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.134796
-- ERROR:
  File "/home/codebench/codes/1644/1053/main.py", line 2
    if(patrono == "cervo")
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:21:37) 
-- CODE:
patrono = input ("Qual o nome do patrono:")
if(patrono == "cervo")
 mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = patrono + "nao eh patrono de Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.20057
-- ERROR:
  File "/home/codebench/codes/1644/1053/main.py", line 2
    if(patrono == "cervo")
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:22:16) 
-- CODE:
patrono = input ("Qual o nome do patrono?")
if(patrono == "cervo")
 mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = patrono + "nao eh patrono de Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.185745
-- ERROR:
  File "/home/codebench/codes/1644/1053/main.py", line 2
    if(patrono == "cervo")
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:29:08) 
-- CODE:
patrono = input("Qual o nome do patrono?")
if(patrono == "cervo")
 mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = patrono + "nao eh patrono de Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.140975
-- ERROR:
  File "/home/codebench/codes/1644/1053/main.py", line 2
    if(patrono == "cervo")
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:29:37) 
-- CODE:
patrono = input("Qual o nome do patrono?")
if(patrono == "cervo")
 mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = patrono + "nao eh patrono de Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.135167
-- ERROR:
  File "/home/codebench/codes/1644/1053/main.py", line 2
    if(patrono == "cervo")
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
